Expl.Itinerary.Parser/ANTLR/TimeDefParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 TimeDef.g 2011-06-07 17:49:19

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


   using System.Collections.Generic;
   using Debug = System.Diagnostics.Debug;
   using Expl.Itinerary;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

public partial class TimeDefParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"WS", 
		"UINT", 
		"ALPHA", 
		"'lasting'", 
		"'every'", 
		"'since'", 
		"'cron'", 
		"'week'", 
		"'void'", 
		"'('", 
		"')'", 
		"'<='", 
		"'<'", 
		"'#'", 
		"'x'", 
		"'+'", 
		"'-'", 
		"','", 
		"'!&&'", 
		"'&&'", 
		"'|'", 
		"'!&'", 
		"'&'", 
		"':'", 
		"'.'", 
		"'T'", 
		"'!'", 
		"'/'", 
		"'*'", 
		"'>'"
    };

    public const int T__29 = 29;
    public const int T__28 = 28;
    public const int T__27 = 27;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int T__23 = 23;
    public const int UINT = 5;
    public const int T__22 = 22;
    public const int T__21 = 21;
    public const int T__20 = 20;
    public const int EOF = -1;
    public const int T__9 = 9;
    public const int T__8 = 8;
    public const int T__7 = 7;
    public const int ALPHA = 6;
    public const int T__30 = 30;
    public const int T__19 = 19;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int WS = 4;
    public const int T__33 = 33;
    public const int T__16 = 16;
    public const int T__15 = 15;
    public const int T__18 = 18;
    public const int T__17 = 17;
    public const int T__12 = 12;
    public const int T__11 = 11;
    public const int T__14 = 14;
    public const int T__13 = 13;
    public const int T__10 = 10;

    // delegates
    // delegators



        public TimeDefParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public TimeDefParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return TimeDefParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "TimeDef.g"; }
    }


    public class prog_return : ParserRuleReturnScope
    {
        public ISchedule value;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "prog"
    // TimeDef.g:21:1: prog returns [ISchedule value] : expr EOF ;
    public TimeDefParser.prog_return prog() // throws RecognitionException [1]
    {   
        TimeDefParser.prog_return retval = new TimeDefParser.prog_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken EOF2 = null;
        TimeDefParser.expr_return expr1 = default(TimeDefParser.expr_return);


        object EOF2_tree=null;

        try 
    	{
            // TimeDef.g:21:31: ( expr EOF )
            // TimeDef.g:22:4: expr EOF
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_expr_in_prog62);
            	expr1 = expr();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr1.Tree);
            	EOF2=(IToken)Match(input,EOF,FOLLOW_EOF_in_prog64); if (state.failed) return retval;
            	if ( state.backtracking == 0 )
            	{EOF2_tree = (object)adaptor.Create(EOF2);
            		adaptor.AddChild(root_0, EOF2_tree);
            	}
            	if ( (state.backtracking==0) )
            	{
            	   retval.value =  ((expr1 != null) ? expr1.value : default(ISchedule)); 
            	}

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }

           catch (RecognitionException) { throw; }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "prog"

    public class atom_return : ParserRuleReturnScope
    {
        public ISchedule value;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "atom"
    // TimeDef.g:47:1: atom returns [ISchedule value] : ( once_p | every_p | cron_p | dayofweek_p | void_p | paren_p );
    public TimeDefParser.atom_return atom() // throws RecognitionException [1]
    {   
        TimeDefParser.atom_return retval = new TimeDefParser.atom_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        TimeDefParser.once_p_return once_p3 = default(TimeDefParser.once_p_return);

        TimeDefParser.every_p_return every_p4 = default(TimeDefParser.every_p_return);

        TimeDefParser.cron_p_return cron_p5 = default(TimeDefParser.cron_p_return);

        TimeDefParser.dayofweek_p_return dayofweek_p6 = default(TimeDefParser.dayofweek_p_return);

        TimeDefParser.void_p_return void_p7 = default(TimeDefParser.void_p_return);

        TimeDefParser.paren_p_return paren_p8 = default(TimeDefParser.paren_p_return);



        try 
    	{
            // TimeDef.g:47:31: ( once_p | every_p | cron_p | dayofweek_p | void_p | paren_p )
            int alt1 = 6;
            switch ( input.LA(1) ) 
            {
            case UINT:
            	{
                alt1 = 1;
                }
                break;
            case 8:
            	{
                alt1 = 2;
                }
                break;
            case 10:
            	{
                alt1 = 3;
                }
                break;
            case 11:
            	{
                alt1 = 4;
                }
                break;
            case 12:
            	{
                alt1 = 5;
                }
                break;
            case 13:
            	{
                alt1 = 6;
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d1s0 =
            	        new NoViableAltException("", 1, 0, input);

            	    throw nvae_d1s0;
            }

            switch (alt1) 
            {
                case 1 :
                    // TimeDef.g:48:4: once_p
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_once_p_in_atom103);
                    	once_p3 = once_p();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, once_p3.Tree);
                    	if ( (state.backtracking==0) )
                    	{
                    	   retval.value =  ((once_p3 != null) ? once_p3.value : default(OneTimeSchedule)); 
                    	}

                    }
                    break;
                case 2 :
                    // TimeDef.g:49:4: every_p
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_every_p_in_atom112);
                    	every_p4 = every_p();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, every_p4.Tree);
                    	if ( (state.backtracking==0) )
                    	{
                    	   retval.value =  ((every_p4 != null) ? every_p4.value : default(IntervalSchedule)); 
                    	}

                    }
                    break;
                case 3 :
                    // TimeDef.g:50:4: cron_p
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_cron_p_in_atom121);
                    	cron_p5 = cron_p();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, cron_p5.Tree);
                    	if ( (state.backtracking==0) )
                    	{
                    	   retval.value =  ((cron_p5 != null) ? cron_p5.value : default(CronSchedule)); 
                    	}

                    }
                    break;
                case 4 :
                    // TimeDef.g:51:4: dayofweek_p
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_dayofweek_p_in_atom130);
                    	dayofweek_p6 = dayofweek_p();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, dayofweek_p6.Tree);
                    	if ( (state.backtracking==0) )
                    	{
                    	   retval.value =  ((dayofweek_p6 != null) ? dayofweek_p6.value : default(DayOfWeekSchedule)); 
                    	}

                    }
                    break;
                case 5 :
                    // TimeDef.g:52:4: void_p
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_void_p_in_atom139);
                    	void_p7 = void_p();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, void_p7.Tree);
                    	if ( (state.backtracking==0) )
                    	{
                    	   retval.value =  ((void_p7 != null) ? void_p7.value : default(VoidSchedule)); 
                    	}

                    }
                    break;
                case 6 :
                    // TimeDef.g:53:4: paren_p
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_paren_p_in_atom148);
                    	paren_p8 = paren_p();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, paren_p8.Tree);
                    	if ( (state.backtracking==0) )
                    	{
                    	   retval.value =  ((paren_p8 != null) ? paren_p8.value : default(ISchedule)); 
                    	}

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }

           catch (RecognitionException) { throw; }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "atom"

    public class once_p_return : ParserRuleReturnScope
    {
        public OneTimeSchedule value;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "once_p"
    // TimeDef.g:59:1: once_p returns [OneTimeSchedule value] : (start= datetime_p ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? ) ;
    public TimeDefParser.once_p_return once_p() // throws RecognitionException [1]
    {   
        TimeDefParser.once_p_return retval = new TimeDefParser.once_p_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken WS9 = null;
        IToken string_literal10 = null;
        IToken WS11 = null;
        TimeDefParser.datetime_p_return start = default(TimeDefParser.datetime_p_return);

        TimeDefParser.timespan_p_return duration = default(TimeDefParser.timespan_p_return);


        object WS9_tree=null;
        object string_literal10_tree=null;
        object WS11_tree=null;

        try 
    	{
            // TimeDef.g:59:39: ( (start= datetime_p ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? ) )
            // TimeDef.g:59:41: (start= datetime_p ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? )
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// TimeDef.g:59:41: (start= datetime_p ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? )
            	// TimeDef.g:60:4: start= datetime_p ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )?
            	{
            		PushFollow(FOLLOW_datetime_p_in_once_p172);
            		start = datetime_p();
            		state.followingStackPointer--;
            		if (state.failed) return retval;
            		if ( state.backtracking == 0 ) adaptor.AddChild(root_0, start.Tree);
            		// TimeDef.g:60:21: ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )?
            		int alt4 = 2;
            		alt4 = dfa4.Predict(input);
            		switch (alt4) 
            		{
            		    case 1 :
            		        // TimeDef.g:60:22: ( WS )+ 'lasting' ( WS )+ duration= timespan_p
            		        {
            		        	// TimeDef.g:60:22: ( WS )+
            		        	int cnt2 = 0;
            		        	do 
            		        	{
            		        	    int alt2 = 2;
            		        	    int LA2_0 = input.LA(1);

            		        	    if ( (LA2_0 == WS) )
            		        	    {
            		        	        alt2 = 1;
            		        	    }


            		        	    switch (alt2) 
            		        		{
            		        			case 1 :
            		        			    // TimeDef.g:0:0: WS
            		        			    {
            		        			    	WS9=(IToken)Match(input,WS,FOLLOW_WS_in_once_p175); if (state.failed) return retval;
            		        			    	if ( state.backtracking == 0 )
            		        			    	{WS9_tree = (object)adaptor.Create(WS9);
            		        			    		adaptor.AddChild(root_0, WS9_tree);
            		        			    	}

            		        			    }
            		        			    break;

            		        			default:
            		        			    if ( cnt2 >= 1 ) goto loop2;
            		        			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		        		            EarlyExitException eee2 =
            		        		                new EarlyExitException(2, input);
            		        		            throw eee2;
            		        	    }
            		        	    cnt2++;
            		        	} while (true);

            		        	loop2:
            		        		;	// Stops C# compiler whining that label 'loop2' has no statements

            		        	string_literal10=(IToken)Match(input,7,FOLLOW_7_in_once_p178); if (state.failed) return retval;
            		        	if ( state.backtracking == 0 )
            		        	{string_literal10_tree = (object)adaptor.Create(string_literal10);
            		        		adaptor.AddChild(root_0, string_literal10_tree);
            		        	}
            		        	// TimeDef.g:60:36: ( WS )+
            		        	int cnt3 = 0;
            		        	do 
            		        	{
            		        	    int alt3 = 2;
            		        	    int LA3_0 = input.LA(1);

            		        	    if ( (LA3_0 == WS) )
            		        	    {
            		        	        alt3 = 1;
            		        	    }


            		        	    switch (alt3) 
            		        		{
            		        			case 1 :
            		        			    // TimeDef.g:0:0: WS
            		        			    {
            		        			    	WS11=(IToken)Match(input,WS,FOLLOW_WS_in_once_p180); if (state.failed) return retval;
            		        			    	if ( state.backtracking == 0 )
            		        			    	{WS11_tree = (object)adaptor.Create(WS11);
            		        			    		adaptor.AddChild(root_0, WS11_tree);
            		        			    	}

            		        			    }
            		        			    break;

            		        			default:
            		        			    if ( cnt3 >= 1 ) goto loop3;
            		        			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		        		            EarlyExitException eee3 =
            		        		                new EarlyExitException(3, input);
            		        		            throw eee3;
            		        	    }
            		        	    cnt3++;
            		        	} while (true);

            		        	loop3:
            		        		;	// Stops C# compiler whining that label 'loop3' has no statements

            		        	PushFollow(FOLLOW_timespan_p_in_once_p185);
            		        	duration = timespan_p();
            		        	state.followingStackPointer--;
            		        	if (state.failed) return retval;
            		        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, duration.Tree);

            		        }
            		        break;

            		}


            	}

            	if ( (state.backtracking==0) )
            	{
            	   retval.value =  new OneTimeSchedule(((start != null) ? start.value : default(DateTime)), duration==null ? TimeSpan.Zero : ((duration != null) ? duration.value : default(TimeSpan))); 
            	}

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }

           catch (RecognitionException) { throw; }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "once_p"

    public class every_p_return : ParserRuleReturnScope
    {
        public IntervalSchedule value;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "every_p"
    // TimeDef.g:63:1: every_p returns [IntervalSchedule value] : ( 'every' ( WS )+ interval= timespan_p ( ( WS )+ 'since' ( WS )+ sync= datetime_p )? ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? ) ;
    public TimeDefParser.every_p_return every_p() // throws RecognitionException [1]
    {   
        TimeDefParser.every_p_return retval = new TimeDefParser.every_p_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken string_literal12 = null;
        IToken WS13 = null;
        IToken WS14 = null;
        IToken string_literal15 = null;
        IToken WS16 = null;
        IToken WS17 = null;
        IToken string_literal18 = null;
        IToken WS19 = null;
        TimeDefParser.timespan_p_return interval = default(TimeDefParser.timespan_p_return);

        TimeDefParser.datetime_p_return sync = default(TimeDefParser.datetime_p_return);

        TimeDefParser.timespan_p_return duration = default(TimeDefParser.timespan_p_return);


        object string_literal12_tree=null;
        object WS13_tree=null;
        object WS14_tree=null;
        object string_literal15_tree=null;
        object WS16_tree=null;
        object WS17_tree=null;
        object string_literal18_tree=null;
        object WS19_tree=null;

        try 
    	{
            // TimeDef.g:63:41: ( ( 'every' ( WS )+ interval= timespan_p ( ( WS )+ 'since' ( WS )+ sync= datetime_p )? ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? ) )
            // TimeDef.g:63:43: ( 'every' ( WS )+ interval= timespan_p ( ( WS )+ 'since' ( WS )+ sync= datetime_p )? ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? )
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// TimeDef.g:63:43: ( 'every' ( WS )+ interval= timespan_p ( ( WS )+ 'since' ( WS )+ sync= datetime_p )? ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )? )
            	// TimeDef.g:64:4: 'every' ( WS )+ interval= timespan_p ( ( WS )+ 'since' ( WS )+ sync= datetime_p )? ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )?
            	{
            		string_literal12=(IToken)Match(input,8,FOLLOW_8_in_every_p207); if (state.failed) return retval;
            		if ( state.backtracking == 0 )
            		{string_literal12_tree = (object)adaptor.Create(string_literal12);
            			adaptor.AddChild(root_0, string_literal12_tree);
            		}
            		// TimeDef.g:64:12: ( WS )+
            		int cnt5 = 0;
            		do 
            		{
            		    int alt5 = 2;
            		    int LA5_0 = input.LA(1);

            		    if ( (LA5_0 == WS) )
            		    {
            		        alt5 = 1;
            		    }


            		    switch (alt5) 
            			{
            				case 1 :
            				    // TimeDef.g:0:0: WS
            				    {
            				    	WS13=(IToken)Match(input,WS,FOLLOW_WS_in_every_p209); if (state.failed) return retval;
            				    	if ( state.backtracking == 0 )
            				    	{WS13_tree = (object)adaptor.Create(WS13);
            				    		adaptor.AddChild(root_0, WS13_tree);
            				    	}

            				    }
            				    break;

            				default:
            				    if ( cnt5 >= 1 ) goto loop5;
            				    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            			            EarlyExitException eee5 =
            			                new EarlyExitException(5, input);
            			            throw eee5;
            		    }
            		    cnt5++;
            		} while (true);

            		loop5:
            			;	// Stops C# compiler whining that label 'loop5' has no statements

            		PushFollow(FOLLOW_timespan_p_in_every_p214);
            		interval = timespan_p();
            		state.followingStackPointer--;
            		if (state.failed) return retval;
            		if ( state.backtracking == 0 ) adaptor.AddChild(root_0, interval.Tree);
            		// TimeDef.g:64:36: ( ( WS )+ 'since' ( WS )+ sync= datetime_p )?
            		int alt8 = 2;
            		alt8 = dfa8.Predict(input);
            		switch (alt8) 
            		{
            		    case 1 :
            		        // TimeDef.g:64:37: ( WS )+ 'since' ( WS )+ sync= datetime_p
            		        {
            		        	// TimeDef.g:64:37: ( WS )+
            		        	int cnt6 = 0;
            		        	do 
            		        	{
            		        	    int alt6 = 2;
            		        	    int LA6_0 = input.LA(1);

            		        	    if ( (LA6_0 == WS) )
            		        	    {
            		        	        alt6 = 1;
            		        	    }


            		        	    switch (alt6) 
            		        		{
            		        			case 1 :
            		        			    // TimeDef.g:0:0: WS
            		        			    {
            		        			    	WS14=(IToken)Match(input,WS,FOLLOW_WS_in_every_p217); if (state.failed) return retval;
            		        			    	if ( state.backtracking == 0 )
            		        			    	{WS14_tree = (object)adaptor.Create(WS14);
            		        			    		adaptor.AddChild(root_0, WS14_tree);
            		        			    	}

            		        			    }
            		        			    break;

            		        			default:
            		        			    if ( cnt6 >= 1 ) goto loop6;
            		        			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		        		            EarlyExitException eee6 =
            		        		                new EarlyExitException(6, input);
            		        		            throw eee6;
            		        	    }
            		        	    cnt6++;
            		        	} while (true);

            		        	loop6:
            		        		;	// Stops C# compiler whining that label 'loop6' has no statements

            		        	string_literal15=(IToken)Match(input,9,FOLLOW_9_in_every_p220); if (state.failed) return retval;
            		        	if ( state.backtracking == 0 )
            		        	{string_literal15_tree = (object)adaptor.Create(string_literal15);
            		        		adaptor.AddChild(root_0, string_literal15_tree);
            		        	}
            		        	// TimeDef.g:64:49: ( WS )+
            		        	int cnt7 = 0;
            		        	do 
            		        	{
            		        	    int alt7 = 2;
            		        	    int LA7_0 = input.LA(1);

            		        	    if ( (LA7_0 == WS) )
            		        	    {
            		        	        alt7 = 1;
            		        	    }


            		        	    switch (alt7) 
            		        		{
            		        			case 1 :
            		        			    // TimeDef.g:0:0: WS
            		        			    {
            		        			    	WS16=(IToken)Match(input,WS,FOLLOW_WS_in_every_p222); if (state.failed) return retval;
            		        			    	if ( state.backtracking == 0 )
            		        			    	{WS16_tree = (object)adaptor.Create(WS16);
            		        			    		adaptor.AddChild(root_0, WS16_tree);
            		        			    	}

            		        			    }
            		        			    break;

            		        			default:
            		        			    if ( cnt7 >= 1 ) goto loop7;
            		        			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		        		            EarlyExitException eee7 =
            		        		                new EarlyExitException(7, input);
            		        		            throw eee7;
            		        	    }
            		        	    cnt7++;
            		        	} while (true);

            		        	loop7:
            		        		;	// Stops C# compiler whining that label 'loop7' has no statements

            		        	PushFollow(FOLLOW_datetime_p_in_every_p227);
            		        	sync = datetime_p();
            		        	state.followingStackPointer--;
            		        	if (state.failed) return retval;
            		        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, sync.Tree);

            		        }
            		        break;

            		}

            		// TimeDef.g:64:71: ( ( WS )+ 'lasting' ( WS )+ duration= timespan_p )?
            		int alt11 = 2;
            		alt11 = dfa11.Predict(input);
            		switch (alt11) 
            		{
            		    case 1 :
            		        // TimeDef.g:64:72: ( WS )+ 'lasting' ( WS )+ duration= timespan_p
            		        {
            		        	// TimeDef.g:64:72: ( WS )+
            		        	int cnt9 = 0;
            		        	do 
            		        	{
            		        	    int alt9 = 2;
            		        	    int LA9_0 = input.LA(1);

            		        	    if ( (LA9_0 == WS) )
            		        	    {
            		        	        alt9 = 1;
            		        	    }


            		        	    switch (alt9) 
            		        		{
            		        			case 1 :
            		        			    // TimeDef.g:0:0: WS
            		        			    {
            		        			    	WS17=(IToken)Match(input,WS,FOLLOW_WS_in_every_p232); if (state.failed) return retval;
            		        			    	if ( state.backtracking == 0 )
            		        			    	{WS17_tree = (object)adaptor.Create(WS17);
            		        			    		adaptor.AddChild(root_0, WS17_tree);
            		        			    	}

            		        			    }
            		        			    break;

            		        			default:
            		        			    if ( cnt9 >= 1 ) goto loop9;
            		        			    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            		        		            EarlyExitException eee9 =
            		        		                new EarlyExitException(9, input);
            		        		            throw eee9;
            		        	    }
